Fix newInstance() deprecation warning